<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apple Bloom Rewards</string>

    <dimen name="button_width">180dp</dimen>
    <dimen name="button_height">90dp</dimen>
    <dimen name="border_spacing">15dp</dimen>

    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="scanDescription">Scan Barcode</string>
    <string name="backDescription">Backspace</string>
    <string name="phoneDescription">Phone Icon</string>
    <string name="emailDescription">Email Icon</string>
    <string name="goButt">GO!</string>
    <string name="enterPhone">Enter your 10-digit mobile # to claim your points:</string>
    <string name="enterEmail">Enter your e-mail address to receive exclusive offers:</string>
    <string name="lookupUrl">http://api.applebloom.co/loyalty/lookup.json</string>
    <string name="updateUrl">http://api.applebloom.co/loyalty/update.json</string>
    <string name="firstRunUrl">http://api.applebloom.co/loyalty/uuid.text</string>
    <string name="pingerUrl">http://api.applebloom.co/loyalty/polling.json</string>
    <string name="syncUrl">http://api.applebloom.co/loyalty/sync.json</string>
    <string name="downloadUrl">http://api.applebloom.co/loyalty/download.json</string>
    <string name="downloadRedeemablesUrl">http://api.applebloom.co/loyalty/redemption.json</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_admin">Administrative Tasks</string>

</resources>